--- a/resume.tex
+++ b/resume.tex
@@ -146,7 +146,8 @@
 \textit{Organizer \& Creator} \hfill January 2023--Present
 \begin{itemize}
     \item Coordinated team of 15+ writers, researchers, and editors in the creation of content for a popular science blog.
-    \item Wrote several articles on behavioral economics, covering topics on expected utility theory and prospect theory, loss aversion and risk aversion, status quo bias, economic games, social preferences and altruism, and competitiveness. Created animations (\emph{\href{https://github.com/AdenChen27/Econic}{\color{blue} GitHub}}) using Python and Manim.
+    \item Wrote several articles on behavioral economics, touching on topics including expected utility theory and prospect theory, loss aversion and risk aversion, status quo bias, economic games, social preferences and altruism, and competitiveness. 
+    \item Created animations (\emph{\href{https://github.com/AdenChen27/Econic}{\color{blue} GitHub}}) using Python and Manim.
 \end{itemize}
 
 %\noindent
