--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,6 @@
 
 \usepackage{fontawesome}
 
-\newcommand{\CPP}{C\nolinebreak\hspace{-.05em}\raisebox{.4ex}{\tiny\bf +}\nolinebreak\hspace{-.10em}\raisebox{.4ex}{\tiny\bf +}}
 
 
 % Formatting
@@ -20,7 +19,9 @@
 \titleformat{\section}{\large\bfseries}{\thesection}{1em}{}[\titlerule] % Section title format
 \titlespacing*{\section}{0pt}{\baselineskip}{\baselineskip} % Section title spacing
 
-% Begin document
+% Typeset "C++"
+\newcommand{\CPP}{C\nolinebreak\hspace{-.05em}\raisebox{.4ex}{\tiny\bf +}\nolinebreak\hspace{-.10em}\raisebox{.4ex}{\tiny\bf +}}
+
 \begin{document}
 
 % Disable page numbers
@@ -37,36 +38,33 @@
     $|$
     \href{https://github.com/AdenChen27}{\faGithub\space Github}
     % $|$
-    %   adenc@uchicago.edu \\ 
-    %   (872) 899-4015 \\ 
-    %   1414 E. 59th St., Room 320 \\ 
-    %   Chicago, IL 60637 \\ 
 \end{center}
 
 % Education Section
 \section*{EDUCATION}
 \noindent
 \textbf{The University of Chicago} \hfill Chicago, IL \\ 
-\textit{Bachelor of Arts in Economics and Mathematics} \hfill Expected, June 2027 \\ 
-\noindent
+\textit{Bachelor of Arts in Economics and Mathematics} \hfill \textit{Expected, June 2027} \\
 % \textbf{Relevent Coursework}
-\textbf{Coursework:} Honors Calculus, Multiscale Modeling of Biological Systems, Approaches to Digital Humanities Using Python, Introduction to Data Science
+% \noindent
+\textbf{GPA:} 3.940 \textbf{Coursework:} Honors Calculus, Multiscale Modeling of Biological Systems, Introduction to Data Science
 % \textbf{Others:} Oeconomica, International Collegiate Programming Contest (ICPC)
 
 % Experience Section
 \section*{RESEARCH}
 \noindent
-\textbf{Nationalism Sentiment during Covid-19 in China} \hfill Fujian, China \\
-\textit{Research Assistant} \hfill February 2023--March 2023
+\textbf{Nationalism Sentiment during Covid-19 in China} 
+\hfill February 2023 -- March 2023 \\
+\textit{Research Assistant} 
 \begin{itemize}
     \item Utilized Python to scrape blogs posted on Weibo from 2018 to 2022, focusing on topics related to the US, to gather data for sentiment analysis.
 \end{itemize}
 
 \noindent
 \textbf{Gender Difference in Psychology}
-\emph{\href{https://drive.google.com/file/d/19cO9fOI9KPIAT2OV0WPENLVXvrM-A7fZ/view?usp=sharing}{\color{blue} pdf}}
-\hfill Fujian, China \\
-\textit{Researcher} \hfill May 2022--June 2022
+\emph{\href{https://drive.google.com/file/d/19cO9fOI9KPIAT2OV0WPENLVXvrM-A7fZ/view?usp=sharing}{\color{blue} pdf}} 
+\hfill May 2022 -- June 2022 \\
+\textit{Researcher} 
 \begin{itemize}
     \item Investigated the gender differences in personality and career preferences. 
     \item Paper discussing both biological and social factors and the gender equality paradox won commendation in the John Locke Institute Global Essay Competition.
@@ -74,15 +72,15 @@
 
 \noindent
 \textbf{How Perceptions of Intelligence Influence Education} 
-\emph{\href{https://drive.google.com/file/d/1lgQKk7_geC_NsAG5uHnPfWY3wKy38_-o/view?usp=sharing}{\color{blue} pdf}}
-\hfill Fujian, China \\
-\textit{Researcher} \hfill February 2022--March 2022
+\emph{\href{https://drive.google.com/file/d/1lgQKk7_geC_NsAG5uHnPfWY3wKy38_-o/view?usp=sharing}{\color{blue} pdf}} 
+\hfill February 2022 -- March 2022 \\
+\textit{Researcher} 
 \begin{itemize}
     \item Wrote a research paper on the interplay between students' implicit theory of intelligence and stereotype threats, classroom interventions that promote a harmful fixed mindset, and possible interventions to promote a growth mindset. 
 \end{itemize}
 
 % \noindent
-% \textbf{Short-Circuits in the Mind} \hfill Fujian, China \\
+% \textbf{Short-Circuits in the Mind} \hfill  \\
 % \textit{Researcher} \hfill May 2021 – June 2021
 % \begin{itemize}
 %     \item Researched and the dual process model and wrote paper analyzing the process of "doubt and investigation,” people's "common sense," and how the brain "short-circuits" itself. I then discussed how cults and fake news might utilize this feature of the brain and possible mitigative measures.
@@ -94,8 +92,8 @@
 \noindent
 \textbf{ESL Learning Website} 
 \emph{\href{https://github.com/AdenChen27/Project_0}{\color{blue} GitHub}}
-\hfill Fujian, China \\
-\textit{Developer} \hfill September 2021--June 2023
+\hfill September 2021 -- June 2023  \\
+\textit{Developer}
 \begin{itemize}
     \item Developed a Django-based website for interactive learning, integrating auto-generated quizzes for word comprehension. 
     \item Recognized as a finalist in the Rise Global Challenge by Schmidt Futures and the Rhodes Trust.
@@ -104,8 +102,8 @@
 \noindent
 \textbf{Online APA7 In-Text Citation Checker} 
 \emph{\href{https://github.com/AdenChen27/AdenChen27.github.io/tree/main/citation_checker}{\color{blue} GitHub}}
-\hfill Fujian, China \\
-\textit{Developer} \hfill June 2022--August 2022
+\hfill June 2022 -- August 2022 \\
+\textit{Developer} 
 \begin{itemize}
     \item Designed and developed a webpage utilizing JavaScript and RegEx to check the format of APA7-styled in-text citations.
 \end{itemize}
@@ -113,10 +111,10 @@
 \noindent
 \textbf{2048 Solver} 
 \emph{\href{https://github.com/AdenChen27/2048_solver}{\color{blue} GitHub}}
-\hfill Fujian, China \\
-\textit{Developer} \hfill January 2021
+\hfill January 2021 \\
+\textit{Developer} 
 \begin{itemize}
-    \item Wrote a program in \CPP \space that plays the game 2048 using Minimax algorithm. Set parameters with genetic algorithm.
+    \item Wrote a program in \CPP \space that plays the game 2048 using Minimax algorithm. 
 \end{itemize}
 
 % Leadership & Activities
@@ -125,16 +123,16 @@
 
 \noindent
 \textbf{Recognized Student Organization: Oeconomica} 
-\hfill Chicago, IL \\
-\textit{Member} \hfill October 2023--Present
+\hfill October 2023 -- Present \\
+\textit{Member} \hfill \textit{Chicago, IL}
 \begin{itemize}
     \item Attend weekly lectures and faculty talks, learning causal inference, linear regression, R, \LaTeX, and acquiring insights into the latest faculty research.
 \end{itemize}
 
 \noindent
 \textbf{International Collegiate Programming Contest (ICPC)} 
-\hfill Chicago, IL \\
-\textit{Member} \hfill October 2023--Present
+\hfill October 2023 -- Present \\
+\textit{Member} \hfill \textit{Chicago, IL}
 \begin{itemize}
     \item Actively participate in weekly training sessions for ICPC.
 \end{itemize}
@@ -142,8 +140,8 @@
 
 \noindent
 \textbf{Popular Science Articles} 
-\hfill Fujian, China \\
-\textit{Organizer \& Creator} \hfill January 2023--Present
+\hfill January 2023 -- Present \\
+\textit{Organizer \& Creator}
 \begin{itemize}
     \item Coordinated team of 15+ writers, researchers, and editors in the creation of content for a popular science blog.
     \item Wrote several articles on behavioral economics, touching on topics including expected utility theory and prospect theory, loss aversion and risk aversion, status quo bias, economic games, social preferences and altruism, and competitiveness. 
@@ -152,15 +150,15 @@
 
 %\noindent
 %\textbf{ESL Tutoring Team} 
-%\hfill Fujian, China \\
-%\textit{Organizer \& Tutor} \hfill January 2023--August 2023
+%\hfill  \\
+%\textit{Organizer \& Tutor} \hfill January 2023 -- August 2023
 %\begin{itemize}
 %    \item Led team of 3 tutoring middle and high school students. Designed and delivered a total of 96 ESL classes to middle and high school students. Donated income to Project Hope.
 %\end{itemize}
 
 %\noindent
 %\textbf{School Olympiad Team in Informatics} 
-%\hfill Fujian, China \\
+%\hfill  \\
 %\textit{Team Member} \hfill September 2019--October 2022
 %\begin{itemize}
 %    \item Won multiple individual top prizes in China's National Olympiad in Informatics in Province (NOIP) and China Computer Foundation’s Certified Senior non-Pro contests, senior division (CSP-S).
@@ -168,8 +166,8 @@
 
 % \noindent
 % \textbf{China Thinks Big Innovation and Research Competition} 
-% \hfill Fujian, China \\
-% \textit{Team Member} \hfill October 2021--March 2022
+% \hfill  \\
+% \textit{Team Member} \hfill October 2021 -- March 2022
 % \begin{itemize}
 %    \item Researched and addressed the psychological roots of gender gap in high school sports participation. 
 %    \item Developed website for project using Python and Django. 
@@ -181,7 +179,7 @@
 \section*{SKILLS}
 % \textbf{Languages:} Mandarin, English \\ 
 % \textbf{Computing:} Proficient in Python and \CPP\@. Familiar with R, JavaScript, C, HTML/CSS, and \LaTeX.
-\textbf{Programming Languages:} Python, C/\CPP\@, R, JavaScript, HTML/CSS, and \LaTeX.
+\textbf{Programming Languages:} Python, C/\CPP\@, R, JavaScript, HTML/CSS. \\
+\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, Django
 
-% End document
 \end{document}
