--- a/resume.tex
+++ b/resume.tex
@@ -46,12 +46,12 @@
 % Education Section
 \section*{EDUCATION}
 \noindent
-\textbf{The University of Chicago} \hfill Chicago, IL \\ 
-\textit{Bachelor of Arts in Economics and Mathematics} \hfill \textit{Expected, June 2027}
+\textbf{The University of Chicago} \hfill Expected, June 2027 \\ 
+\textit{Bachelor of Arts in Economics and Mathematics} \hfill \textit{Chicago, IL}
 % \textbf{Relevent Coursework}
 % \noindent
 \begin{itemize}
-    \item\textbf{GPA:} 3.940 
+    \item\textbf{GPA:} 3.925 
     \item\textbf{Coursework:} Honors Calculus, Systems Programming, Multiscale Modeling of Biological Systems, Introduction to Data Science, Approaches to Digital Humanities Using Python
     % \item\textbf{Others:} Oeconomica, International Collegiate Programming Contest (ICPC)
 \end{itemize}
