--- a/resume.tex
+++ b/resume.tex
@@ -186,7 +186,7 @@
 % \textbf{Languages:} Mandarin, English \\ 
 % \textbf{Computing:} Proficient in Python and \CPP\@. Familiar with R, JavaScript, C, HTML/CSS, and \LaTeX.
 \textbf{Programming Languages:} Python, C/\CPP\@, R, JavaScript, HTML/CSS. \\
-\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, Django, Manim
+\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, Django, Manim, Jekyll
 
 
 \end{document}
