--- a/resume.tex
+++ b/resume.tex
@@ -68,7 +68,7 @@
 
 \noindent
 \textbf{Gender Differences in Psychology}
-\emph{\href{https://drive.google.com/file/d/19cO9fOI9KPIAT2OV0WPENLVXvrM-A7fZ/view?usp=sharing}{\color{blue} pdf}} 
+\emph{\href{https://drive.google.com/file/d/19cO9fOI9KPIAT2OV0WPENLVXvrM-A7fZ/view?usp=sharing}{\color{blue} [pdf]}} 
 \hfill May 2022 -- June 2022 \\
 \textit{Researcher} 
 \begin{itemize}
@@ -78,7 +78,7 @@
 
 \noindent
 \textbf{How Perceptions of Intelligence Influence Education} 
-\emph{\href{https://drive.google.com/file/d/1lgQKk7_geC_NsAG5uHnPfWY3wKy38_-o/view?usp=sharing}{\color{blue} pdf}} 
+\emph{\href{https://drive.google.com/file/d/1lgQKk7_geC_NsAG5uHnPfWY3wKy38_-o/view?usp=sharing}{\color{blue} [pdf]}} 
 \hfill February 2022 -- March 2022 \\
 \textit{Researcher} 
 \begin{itemize}
@@ -97,7 +97,7 @@
 
 \noindent
 \textbf{ESL Learning Website} 
-\emph{\href{https://github.com/AdenChen27/Project_0}{\color{blue} GitHub}}
+\emph{\href{https://github.com/AdenChen27/Project_0}{\color{blue} [GitHub]}}
 \hfill September 2021 -- June 2023  \\
 \textit{Developer}
 \begin{itemize}
@@ -106,8 +106,8 @@
 \end{itemize}
 
 \noindent
-\textbf{Online APA7 In-Text Citation Checker} \emph{\href{https://adenchen27.github.io/citation_checker/main.html}{\color{blue} Webpage}}
-\emph{\href{https://github.com/AdenChen27/AdenChen27.github.io/tree/main/citation_checker}{\color{blue} GitHub}}
+\textbf{Online APA7 In-Text Citation Checker} \emph{\href{https://adenchen27.github.io/citation_checker/main.html}{\color{blue} [Webpage]}}
+\emph{\href{https://github.com/AdenChen27/AdenChen27.github.io/tree/main/citation_checker}{\color{blue} [GitHub]}}
 \hfill June 2022 -- August 2022 \\
 \textit{Developer} 
 \begin{itemize}
@@ -116,7 +116,7 @@
 
 \noindent
 \textbf{2048 Solver} 
-\emph{\href{https://github.com/AdenChen27/2048_solver}{\color{blue} GitHub}}
+\emph{\href{https://github.com/AdenChen27/2048_solver}{\color{blue} [GitHub]}}
 \hfill January 2021 \\
 \textit{Developer} 
 \begin{itemize}
@@ -151,7 +151,7 @@
 \begin{itemize}
     \item Coordinated team of 15+ writers, researchers, and editors in the creation of content for a popular science blog.
     \item Wrote several articles on behavioral economics, touching on topics including expected utility theory and prospect theory, risk aversion and loss aversion, status quo bias, economic games, social preferences and altruism, competitiveness and the gender equality paradox, framing effect, and scarcity theory. 
-    \item Created mathematical animations for economics concepts using Python and \href{https://www.manim.community/}{Manim} (\emph{\href{https://github.com/AdenChen27/Econic}{\color{blue} GitHub}}).
+    \item Created mathematical animations for economics concepts using Python and \href{https://www.manim.community/}{Manim} (\emph{\href{https://github.com/AdenChen27/Econic}{\color{blue} [GitHub]}}).
 \end{itemize}
 
 %\noindent
