--- a/resume.tex
+++ b/resume.tex
@@ -52,7 +52,7 @@
 % \noindent
 \begin{itemize}
     \item\textbf{GPA:} 3.925 
-    \item\textbf{Coursework:} Honors Calculus, Systems Programming, Multiscale Modeling of Biological Systems, Introduction to Data Science, Approaches to Digital Humanities Using Python
+    \item\textbf{Relevant Coursework:} Honors Calculus II, Systems Programming II, Multiscale Modeling of Biological Systems II, Introduction to Data Science, Approaches to Digital Humanities Using Python
     % \item\textbf{Others:} Oeconomica, International Collegiate Programming Contest (ICPC)
 \end{itemize}
 
@@ -92,7 +92,39 @@
 %     \item Researched and the dual process model and wrote paper analyzing the process of "doubt and investigation,” people's "common sense," and how the brain "short-circuits" itself. I then discussed how cults and fake news might utilize this feature of the brain and possible mitigative measures.
 % \end{itemize}
 
-% Programming Peojects
+
+% Leadership & Activities
+\section*{LEADERSHIP \& ACTIVITIES}
+
+
+\noindent
+\textbf{Recognized Student Organization: Oeconomica} 
+\hfill October 2023 -- Present \\
+\textit{Member in the Econometrics Cohort} \hfill \textit{Chicago, IL}
+\begin{itemize}
+    \item Attend weekly lectures and faculty talks, learning about causal inference, linear regression, R, \LaTeX, and acquiring insights into the latest faculty research.
+\end{itemize}
+
+\noindent
+\textbf{International Collegiate Programming Contest (ICPC)} 
+\hfill October 2023 -- Present \\
+\textit{Member} \hfill \textit{Chicago, IL}
+\begin{itemize}
+    \item Actively participate in weekly training sessions for ICPC.
+\end{itemize}
+
+
+\noindent
+\textbf{Popular Science Articles} 
+\hfill January 2023 -- Present \\
+\textit{Organizer \& Creator}
+\begin{itemize}
+    \item Coordinated team of 15+ writers, researchers, and editors in the creation of content for a popular science blog.
+    \item Wrote several articles on behavioral economics, touching on topics including expected utility theory and prospect theory, risk aversion and loss aversion, status quo bias, economic games, social preferences and altruism, competitiveness and the gender equality paradox, framing effect, and scarcity theory. 
+    \item Created mathematical animations for economics concepts using Python and \href{https://www.manim.community/}{Manim}. \emph{\href{https://github.com/AdenChen27/Econic}{\color{blue} [GitHub]}}.
+\end{itemize}
+
+% Programming Projects
 \section*{PROGRAMMING PROJECTS}
 
 \noindent
@@ -123,36 +155,6 @@
     \item Wrote a program in \CPP \space that plays the game 2048 using Minimax algorithm. 
 \end{itemize}
 
-% Leadership & Activities
-\section*{LEADERSHIP \& ACTIVITIES}
-
-
-\noindent
-\textbf{Recognized Student Organization: Oeconomica} 
-\hfill October 2023 -- Present \\
-\textit{Member in the Econometrics Cohort} \hfill \textit{Chicago, IL}
-\begin{itemize}
-    \item Attend weekly lectures and faculty talks, learning about causal inference, linear regression, R, \LaTeX, and acquiring insights into the latest faculty research.
-\end{itemize}
-
-\noindent
-\textbf{International Collegiate Programming Contest (ICPC)} 
-\hfill October 2023 -- Present \\
-\textit{Member} \hfill \textit{Chicago, IL}
-\begin{itemize}
-    \item Actively participate in weekly training sessions for ICPC.
-\end{itemize}
-
-
-\noindent
-\textbf{Popular Science Articles} 
-\hfill January 2023 -- Present \\
-\textit{Organizer \& Creator}
-\begin{itemize}
-    \item Coordinated team of 15+ writers, researchers, and editors in the creation of content for a popular science blog.
-    \item Wrote several articles on behavioral economics, touching on topics including expected utility theory and prospect theory, risk aversion and loss aversion, status quo bias, economic games, social preferences and altruism, competitiveness and the gender equality paradox, framing effect, and scarcity theory. 
-    \item Created mathematical animations for economics concepts using Python and \href{https://www.manim.community/}{Manim} (\emph{\href{https://github.com/AdenChen27/Econic}{\color{blue} [GitHub]}}).
-\end{itemize}
 
 %\noindent
 %\textbf{ESL Tutoring Team} 
@@ -186,7 +188,7 @@
 % \textbf{Languages:} Mandarin, English \\ 
 % \textbf{Computing:} Proficient in Python and \CPP\@. Familiar with R, JavaScript, C, HTML/CSS, and \LaTeX.
 \textbf{Programming Languages:} Python, C/\CPP\@, R, JavaScript, HTML/CSS. \\
-\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, Django, Manim, Jekyll
+\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, NumPy, SciPy, Django, Manim, Jekyll
 
 
 \end{document}
