--- a/resume.tex
+++ b/resume.tex
@@ -187,8 +187,8 @@
 \section*{SKILLS}
 % \textbf{Languages:} Mandarin, English \\ 
 % \textbf{Computing:} Proficient in Python and \CPP\@. Familiar with R, JavaScript, C, HTML/CSS, and \LaTeX.
-\textbf{Programming Languages:} Python, C/\CPP\@, R, JavaScript, HTML/CSS. \\
-\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, NumPy, SciPy, Django, Manim, Jekyll
+\textbf{Programming Languages:} Python, C/\CPP\@, R, JavaScript, HTML/CSS, Tcl \\
+\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, NumPy, SciPy, Django, Manim, Jekyll, VMD
 
 
 \end{document}
