--- a/resume.tex
+++ b/resume.tex
@@ -119,7 +119,7 @@
 \hfill January 2023 -- Present \\
 \textit{Organizer \& Creator}
 \begin{itemize}
-    \item Coordinated team of 15+ writers, researchers, and editors in the creation of content for a popular science blog.
+    % \item Coordinated team of 15+ writers, researchers, and editors in the creation of content for a popular science blog.
     \item Wrote several articles on behavioral economics, touching on topics including expected utility theory and prospect theory, risk aversion and loss aversion, status quo bias, economic games, social preferences and altruism, competitiveness and the gender equality paradox, framing effect, and scarcity theory. 
     \item Created mathematical animations for economics concepts using Python and \href{https://www.manim.community/}{Manim}. \emph{\href{https://github.com/AdenChen27/Econic}{\color{blue} [GitHub]}}.
 \end{itemize}
@@ -188,7 +188,7 @@
 % \textbf{Languages:} Mandarin, English \\ 
 % \textbf{Computing:} Proficient in Python and \CPP\@. Familiar with R, JavaScript, C, HTML/CSS, and \LaTeX.
 \textbf{Programming Languages:} Python, C/\CPP\@, R, JavaScript, HTML/CSS, Tcl \\
-\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, NumPy, SciPy, Django, Manim, Jekyll, VMD
+\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, NumPy, Beautiful Soup, SciPy, Django, Manim, Jekyll, VMD
 
 
 \end{document}
