--- a/resume.tex
+++ b/resume.tex
@@ -102,7 +102,7 @@
 \hfill October 2023 -- Present \\
 \textit{Member in the Econometrics Cohort} \hfill \textit{Chicago, IL}
 \begin{itemize}
-    \item Attend weekly lectures and faculty talks, learning about causal inference, linear regression, R, \LaTeX, and acquiring insights into the latest faculty research.
+    \item Attend weekly lectures and faculty talks, learning about causal inference, linear regression, R, instrumental variable, \LaTeX, and acquiring insights into the latest faculty research.
 \end{itemize}
 
 \noindent
