--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,8 @@
     $|$
     \href{mailto:adenc@uchicago.edu}{\faAt\space adenc@uchicago.edu}
     $|$
-    \href{https://www.linkedin.com/in/aden-chen-45a924221/}{\faLinkedinSquare \space LinkedIn}
+    \hspace{.5pt}\href{https://adenchen27.github.io/}{\faGlobe\space Portfolio}
+    % \href{https://www.linkedin.com/in/aden-chen-45a924221/}{\faLinkedinSquare \space LinkedIn}
     $|$
     \href{https://github.com/AdenChen27}{\faGithub\space Github}
     % $|$
