--- a/resume.tex
+++ b/resume.tex
@@ -52,13 +52,43 @@
 % \textbf{Relevent Coursework}
 % \noindent
 \begin{itemize}
-    \item\textbf{GPA:} 3.925 
-    \item\textbf{Relevant Coursework:} Honors Calculus II, Systems Programming II, Multiscale Modeling of Biological Systems II, Introduction to Data Science, Approaches to Digital Humanities Using Python
+    \item\textbf{GPA:} 3.950 
+    % \item\textbf{Relevant Coursework:} Honors Calculus II, Systems Programming II, Multiscale Modeling of Biological Systems II, Introduction to Data Science, Approaches to Digital Humanities Using Python
     % \item\textbf{Others:} Oeconomica, International Collegiate Programming Contest (ICPC)
 \end{itemize}
 
 % Experience Section
 \section*{RESEARCH}
+
+\noindent
+\textbf{Becker Friedman Institute Summer Internship Program: MiiE Lab} 
+\hfill June 2024 -- August 2024 \\
+\textit{Research Assistant} 
+\begin{itemize}
+  \item Supported Professor Adukia in her work to analyze images and texts in textbooks, children’s books, and yearbooks using computational methods.
+  \item Crawled yearbook data from dynamic websites, and ran computer vision pipelines to estimate gender and race proportions in schools.
+Ran various natural language processing algorithms on news articles, including emotion analysis, VAD analysis, log odds ratio with Dirichlet prior, name entity recognition, power and agency analysis, topic modeling, among others.
+\end{itemize}
+
+% \noindent
+% \textbf{UChicago Mathematics Research Experience for Undergraduates (REU)} 
+% \hfill June 2024 -- September 2024 \\
+% \textit{Apprentice Researcher} 
+% \begin{itemize}
+%   \item Attend lectures covering a variety of topics in analysis and probability, such as random walks, the heat equation, and closed geodesics. 
+%   \item Self-studied functional analysis, with a focus on ...
+% \end{itemize}
+
+
+\noindent
+\textbf{Research Assistant under Professor Shaoda Wang and Professor Daniel Li Chen} 
+\hfill April 2024 -- June 2024 \\
+\textit{Research Assistant} 
+\begin{itemize}
+  \item Developed pipeline for crawling legal documents in court cases involving expert witness. Downloaded over 3M relevant documents and metadata for over 1.5M cases. 
+\end{itemize}
+
+
 \noindent
 \textbf{Nationalism Sentiment during Covid-19 in China} 
 \hfill February 2023 -- March 2023 \\
@@ -69,7 +99,7 @@
 
 \noindent
 \textbf{Gender Differences in Psychology}
-\emph{\href{https://drive.google.com/file/d/19cO9fOI9KPIAT2OV0WPENLVXvrM-A7fZ/view?usp=sharing}{\color{blue} [pdf]}} 
+[\href{https://drive.google.com/file/d/19cO9fOI9KPIAT2OV0WPENLVXvrM-A7fZ/view?usp=sharing}{\color{blue} \underline{PDF}}]
 \hfill May 2022 -- June 2022 \\
 \textit{Researcher} 
 \begin{itemize}
@@ -77,14 +107,14 @@
     \item Paper discussing both biological and social factors and the gender equality paradox won commendation in the John Locke Institute Global Essay Competition.
 \end{itemize}
 
-\noindent
-\textbf{How Perceptions of Intelligence Influence Education} 
-\emph{\href{https://drive.google.com/file/d/1lgQKk7_geC_NsAG5uHnPfWY3wKy38_-o/view?usp=sharing}{\color{blue} [pdf]}} 
-\hfill February 2022 -- March 2022 \\
-\textit{Researcher} 
-\begin{itemize}
-    \item Wrote a research paper on the interplay between students' implicit theory of intelligence and stereotype threats, classroom interventions that promote a harmful fixed mindset, and possible interventions to promote a growth mindset. 
-\end{itemize}
+% \noindent
+% \textbf{How Perceptions of Intelligence Influence Education} 
+% [\href{https://drive.google.com/file/d/1lgQKk7_geC_NsAG5uHnPfWY3wKy38_-o/view?usp=sharing}{\color{blue} \underline{PDF}}]
+% \hfill February 2022 -- March 2022 \\
+% \textit{Researcher} 
+% \begin{itemize}
+%     \item Wrote a research paper on the interplay between students' implicit theory of intelligence and stereotype threats, classroom interventions that promote a harmful fixed mindset, and possible interventions to promote a growth mindset. 
+% \end{itemize}
 
 % \noindent
 % \textbf{Short-Circuits in the Mind} \hfill  \\
@@ -122,39 +152,39 @@
 \begin{itemize}
     % \item Coordinated team of 15+ writers, researchers, and editors in the creation of content for a popular science blog.
     \item Wrote several articles on behavioral economics, touching on topics including expected utility theory and prospect theory, risk aversion and loss aversion, status quo bias, economic games, social preferences and altruism, competitiveness and the gender equality paradox, framing effect, and scarcity theory. 
-    \item Created mathematical animations for economics concepts using Python and \href{https://www.manim.community/}{Manim}. \emph{\href{https://github.com/AdenChen27/Econic}{\color{blue} [GitHub]}}.
+    \item Created mathematical animations for economics concepts using Python and \href{https://www.manim.community/}{Manim}. [\href{https://github.com/AdenChen27/Econic}{\color{blue} \underline{GitHub}}].
 \end{itemize}
 
 % Programming Projects
-\section*{PROGRAMMING PROJECTS}
+% \section*{PROGRAMMING PROJECTS}
+
+% \noindent
+% \textbf{ESL Learning Website} 
+% [\href{https://github.com/AdenChen27/Project_0}{\color{blue} \underline{GitHub}}]
+% \hfill September 2021 -- June 2023  \\
+% \textit{Developer}
+% \begin{itemize}
+%     \item Developed a Django-based website for interactive learning, integrating auto-generated quizzes for word comprehension. 
+%     \item Recognized as a finalist in the Rise Global Challenge by Schmidt Futures and the Rhodes Trust.
+% \end{itemize}
 
 \noindent
-\textbf{ESL Learning Website} 
-\emph{\href{https://github.com/AdenChen27/Project_0}{\color{blue} [GitHub]}}
-\hfill September 2021 -- June 2023  \\
-\textit{Developer}
-\begin{itemize}
-    \item Developed a Django-based website for interactive learning, integrating auto-generated quizzes for word comprehension. 
-    \item Recognized as a finalist in the Rise Global Challenge by Schmidt Futures and the Rhodes Trust.
-\end{itemize}
-
-\noindent
-\textbf{Online APA7 In-Text Citation Checker} \emph{\href{https://adenchen27.github.io/citation_checker/main.html}{\color{blue} [Webpage]}}
-\emph{\href{https://github.com/AdenChen27/AdenChen27.github.io/tree/main/citation_checker}{\color{blue} [GitHub]}}
+\textbf{Online APA7 In-Text Citation Checker} 
+[\href{https://github.com/AdenChen27/AdenChen27.github.io/tree/main/citation_checker}{\color{blue} \underline{GitHub}}]
 \hfill June 2022 -- August 2022 \\
 \textit{Developer} 
 \begin{itemize}
-    \item Designed and developed a webpage utilizing JavaScript and RegEx to check the format of APA7-styled in-text citations.
+    \item Designed and developed a \href{https://adenchen27.github.io/citation_checker/main.html}{\color{blue} \underline{webpage}} utilizing JavaScript and RegEx to check the format of APA7-styled in-text citations.
 \end{itemize}
 
-\noindent
-\textbf{2048 Solver} 
-\emph{\href{https://github.com/AdenChen27/2048_solver}{\color{blue} [GitHub]}}
-\hfill January 2021 \\
-\textit{Developer} 
-\begin{itemize}
-    \item Wrote a program in \CPP \space that plays the game 2048 using Minimax algorithm. 
-\end{itemize}
+% \noindent
+% \textbf{2048 Solver} 
+% [\href{https://github.com/AdenChen27/2048_solver}{\color{blue} \underline{GitHub}}]
+% \hfill January 2021 \\
+% \textit{Developer} 
+% \begin{itemize}
+%     \item Wrote a program in \CPP \space that plays the game 2048 using Minimax algorithm and Alpha--Beta pruning. 
+% \end{itemize}
 
 
 %\noindent
@@ -188,8 +218,19 @@
 \section*{SKILLS}
 % \textbf{Languages:} Mandarin, English \\ 
 % \textbf{Computing:} Proficient in Python and \CPP\@. Familiar with R, JavaScript, C, HTML/CSS, and \LaTeX.
-\textbf{Programming Languages:} Python, C/\CPP\@, R, JavaScript, HTML/CSS, Tcl \\
-\textbf{Tools:} Git, Jupyter, \LaTeX, Pandas, NumPy, Beautiful Soup, SciPy, Django, Manim, Jekyll, VMD
+\textbf{Programming:} Python, C/\CPP\@, R, JavaScript, HTML/CSS, Tcl \\
+\textbf{Tools:} Git, NLTK, Jupyter, 
+    % Midway, 
+    \LaTeX, Pandas, NumPy, Beautiful Soup, Selenium, SciPy, Django, Manim, Jekyll, VMD \\
+\textbf{Language:} Native in Mandarin Chinese
+
+\section*{HONORS AND AWARDS}
+Uncommon Hacks 2024 --- Winner in the Web Development track. \\ 
+Rise Global Challenge --- Finalist. 
+
+
 
 
 \end{document}
+
+
