--- a/resume.tex
+++ b/resume.tex
@@ -44,14 +44,14 @@
 % Header
 \begin{center}
     \textbf{\Large ADEN CHEN} \\
-    \href{tel:(872) 899-4015}{\faMobile\space (872) 899-4015}
+    \href{tel:(872) 899-4015}{\faMobile\  (872) 899-4015}
     $|$
-    \href{mailto:adenc@uchicago.edu}{\faEnvelope[regular]\ adenc@uchicago.edu}
+    \href{mailto:adenc@uchicago.edu}{\faEnvelope\ adenc@uchicago.edu}
     $|$
-    \hspace{.5pt}\href{https://adenchen27.github.io/}{\faGlobe\space Portfolio}
-    % \href{https://www.linkedin.com/in/aden-chen-45a924221/}{\faLinkedinSquare \space LinkedIn}
+    \hspace{.5pt}\href{https://adenchen27.github.io/}{\faGlobe\  Portfolio}
+    % \href{https://www.linkedin.com/in/aden-chen-45a924221/}{\faLinkedinSquare \  LinkedIn}
     $|$
-    \href{https://github.com/AdenChen27}{\faGithub\space GitHub}
+    \href{https://github.com/AdenChen27}{\faGithub\  GitHub}
     % $|$
 \end{center}
 
@@ -60,7 +60,8 @@
 \textbf{The University of Chicago} \hfill Expected, June 2027 \\ 
 \textit{Bachelor of Arts in Economics and Mathematics} \hfill \textit{Chicago, IL}
 \begin{itemize}
-    \item\textbf{GPA:} 3.950 
+    \item \textbf{GPA}: 3.950 
+    \item \textbf{Dean's List}, 2023--2024.
     % \item\textbf{Relevant Coursework:} Honors Analysis, Systems Programming, Honors Elements of Economic Analysis, Statistical Theory and Methods Ia, Honors Econometrics
     % \item\textbf{Relevant Coursework:} Honors Calculus II, Systems Programming II, Multiscale Modeling of Biological Systems II, Introduction to Data Science, Approaches to Digital Humanities Using Python
     % \item\textbf{Others:} Oeconomica, International Collegiate Programming Contest (ICPC)
@@ -79,13 +80,14 @@
   \item Ran various natural language processing algorithms on news articles, including \href{https://github.com/cjhutto/vaderSentiment}{VADER sentiment analysis}, \href{https://link.springer.com/article/10.3758/s13428-012-0314-x}{VAD analysis}, \href{https://bookdown.org/Maxine/tidy-text-mining/weighted-log-odds-ratio.html}{log odds ratio with Dirichlet prior}, \href{https://aclanthology.org/D17-1247/}{power and agency analysis}, topic modeling, word embedding, and zero shot classification.
 \end{itemize}
 
-% \textbf{UChicago Mathematics Research Experience for Undergraduates (REU)} 
-% \hfill June 2024 -- September 2024 \\
-% \textit{Apprentice Researcher} 
-% \begin{itemize}
-%   \item Attend lectures covering a variety of topics in analysis and probability, such as random walks, the heat equation, and closed geodesics. 
-%   \item Self-studied functional analysis, with a focus on ...
-% \end{itemize}
+\textbf{UChicago Mathematics Research Experience for Undergraduates (REU)} 
+\hfill June 2024 -- September 2024 \\
+\textit{Apprentice Researcher} 
+\begin{itemize}
+  % \item Attend lectures covering a variety of topics in analysis and probability, such as random walks, the heat equation, and closed geodesics. 
+  \item Self studied operator theory. 
+    Authored an \href{https://github.com/AdenChen27/REU2024/blob/main/main.pdf}{expository paper} on spectral theory and the min-max theorem, which gives a variational characterization of the discrete eigenvalues of a self-adjoint operator below the essential spectrum. 
+\end{itemize}
 
 
 \textbf{Research Assistant under Professor Shaoda Wang and Professor Daniel Li Chen} 
@@ -96,12 +98,12 @@
 \end{itemize}
 
 
-\textbf{Nationalism Sentiment during Covid-19 in China} 
-\hfill February 2023 -- March 2023 \\
-\textit{Research Assistant} 
-\begin{itemize}
-    \item Utilized Python to scrape blogs posted on Weibo from 2018 to 2022, focusing on topics related to the US, collecting data for sentiment analysis.
-\end{itemize}
+% \textbf{Nationalism Sentiment during Covid-19 in China} 
+% \hfill February 2023 -- March 2023 \\
+% \textit{Research Assistant} 
+% \begin{itemize}
+%     \item Utilized Python to scrape blogs posted on Weibo from 2018 to 2022, focusing on topics related to the US, collecting data for sentiment analysis.
+% \end{itemize}
 
 % \textbf{Gender Differences in Psychology}
 % [\href{https://drive.google.com/file/d/19cO9fOI9KPIAT2OV0WPENLVXvrM-A7fZ/view?usp=sharing}{PDF}]
@@ -133,17 +135,18 @@
 
 \textbf{Recognized Student Organization: Oeconomica} 
 \hfill October 2023 -- Present \\
-\textit{Member in the Econometrics Cohort} \hfill \textit{Chicago, IL}
+\textit{Coleader of the Macro and Financial Economics Cohort 2024--2025 \\ Member of the Econometrics Cohort 2023--2024} \hfill \textit{Chicago, IL}
 \begin{itemize}
     \item Attend weekly lectures and faculty talks, learning about causal inference, linear regression, R, instrumental variable, \LaTeX, and acquiring insights into the latest faculty research.
+    \item Gave weekly lectures on asset pricing models and Python for economics research. 
 \end{itemize}
 
-\textbf{International Collegiate Programming Contest (ICPC)} 
-\hfill October 2023 -- Present \\
-\textit{Member} \hfill \textit{Chicago, IL}
-\begin{itemize}
-    \item Actively participate in weekly training sessions for ICPC.
-\end{itemize}
+% \textbf{International Collegiate Programming Contest (ICPC)} 
+% \hfill October 2023 -- Present \\
+% \textit{Member} \hfill \textit{Chicago, IL}
+% \begin{itemize}
+%     \item Actively participate in weekly training sessions for ICPC.
+% \end{itemize}
 
 
 \textbf{Popular Science Articles} 
@@ -181,7 +184,7 @@
 % \hfill January 2021 \\
 % \textit{Developer} 
 % \begin{itemize}
-%     \item Wrote a program in \CPP \space that plays the game 2048 using Minimax algorithm and Alpha--Beta pruning. 
+%     \item Wrote a program in \CPP \  that plays the game 2048 using Minimax algorithm and Alpha--Beta pruning. 
 % \end{itemize}
 
 
@@ -213,7 +216,7 @@
 \section*{SKILLS}
 % \textbf{Languages:} Mandarin, English \\ 
 % \textbf{Computing:} Proficient in Python and \CPP\@. Familiar with R, JavaScript, C, HTML/CSS, and \LaTeX.
-\textbf{Programming:} Python, C/\CPP\@, R, JavaScript, HTML/CSS, Tcl \\
+\textbf{Programming:} Python, C, \CPP\@, R, JavaScript, HTML, CSS, Tcl \\
 \textbf{Tools:} Git, NLTK, Jupyter, 
     % Midway, 
     \LaTeX, Pandas, NumPy, Beautiful Soup, Selenium, SciPy, Django, Manim, Jekyll, VMD \\
